--- a/Solutions/MergingTables-Solutions.ipynb
+++ b/Solutions/MergingTables-Solutions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "id": "2ea67098",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 3,
    "id": "91da9073",
    "metadata": {},
    "outputs": [],
@@ -63,10 +63,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 23,
    "id": "d4745cde",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kalaj\\AppData\\Local\\Temp\\ipykernel_19316\\3413256132.py:2: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  append_plants = flowers.append(shrubs)\n"
+     ]
+    }
+   ],
    "source": [
     "#SOLUTION\n",
     "append_plants = flowers.append(shrubs)"
@@ -74,10 +83,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "id": "c0287bc3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kalaj\\AppData\\Local\\Temp\\ipykernel_19316\\979986304.py:2: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  append_plants = flowers.append(shrubs, ignore_index=True)\n"
+     ]
+    }
+   ],
    "source": [
     "# SOLUTION\n",
     "append_plants = flowers.append(shrubs, ignore_index=True)"
@@ -101,15 +119,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 24,
    "id": "71c5fe1d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              Name Plant_Type      Sun_Shade        Name Plant_Type  \\\n",
+      "0             Iris  Perennial       Full Sun     Boxwood  Evergreen   \n",
+      "1            Peony  Perennial       Full Sun   Hydrangea  Flowering   \n",
+      "2            Daisy     Annual    Partial Sun  Dipladenia  Flowering   \n",
+      "3          Petunia     Annual    Partial Sun    Gardenia  Flowering   \n",
+      "4        Impatiens     Annual  Partial Shade         NaN        NaN   \n",
+      "5  Creeping Myrtle  Perennial     Full Shade         NaN        NaN   \n",
+      "\n",
+      "       Sun_Shade  \n",
+      "0   Partial Sund  \n",
+      "1    Partial Sun  \n",
+      "2  Partial Shade  \n",
+      "3       Full Sun  \n",
+      "4            NaN  \n",
+      "5            NaN  \n"
+     ]
+    }
+   ],
    "source": [
     "# Concatenate flowers and shrubs horizontally here:\n",
     "\n",
     "#SOLUTION\n",
-    "flowers_shrubs = pd.concat([flowers, shrubs], axis=1)"
+    "flowers_shrubs = pd.concat([flowers, shrubs], axis=1)\n",
+    "print(flowers_shrubs)"
    ]
   },
   {
@@ -130,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "id": "0b0f427f",
    "metadata": {},
    "outputs": [],
@@ -156,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 8,
    "id": "f275d8c6",
    "metadata": {},
    "outputs": [],
@@ -179,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "id": "9d5ddf17",
    "metadata": {},
    "outputs": [],
@@ -205,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 10,
    "id": "c13290b3",
    "metadata": {},
    "outputs": [],
@@ -226,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 11,
    "id": "0e3dc0da",
    "metadata": {},
    "outputs": [],
@@ -262,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 12,
    "id": "3f868d9a",
    "metadata": {},
    "outputs": [],
@@ -272,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 13,
    "id": "1033af35",
    "metadata": {},
    "outputs": [],
@@ -291,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 14,
    "id": "e6eabfbc",
    "metadata": {},
    "outputs": [],
@@ -312,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 15,
    "id": "48eac82a",
    "metadata": {},
    "outputs": [],
@@ -322,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 16,
    "id": "18f4c32b",
    "metadata": {},
    "outputs": [],
@@ -343,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 17,
    "id": "c3ccb28f",
    "metadata": {},
    "outputs": [],
@@ -366,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 18,
    "id": "20502209",
    "metadata": {},
    "outputs": [],
@@ -399,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 19,
    "id": "d21a3d0b",
    "metadata": {},
    "outputs": [],
@@ -409,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 20,
    "id": "a7cfda58",
    "metadata": {},
    "outputs": [],
@@ -421,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 21,
    "id": "713b4362",
    "metadata": {},
    "outputs": [],
@@ -432,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 22,
    "id": "46081c3c",
    "metadata": {},
    "outputs": [],
@@ -446,7 +487,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -460,7 +501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
